tests/compilefail69.out
[1mtests/compilefail69.pas:10:11: [0m[1m[91merror:[0m Expected ':=' but saw 'is'
    10 | 	for i is 17 to 19 do