tests/compilefail69.pas
program compilefail69(output);
{typo in for statement}


var i:integer;


begin
	
	for i is 17 to 19 do 
		writeln(i);

end.
